ekscluster/awskub-10.4.0.1-eks.yaml
# CoreSuite AuthorityPro Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdk8s-ath-am
  name: sdk8s-ath-am
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sdk8s-ath-am
  template:
    metadata:
      labels:
        app: sdk8s-ath-am
    spec:
      volumes:
      - name: authority-logs
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluentbit-config-adaptik
      containers:
      - name: sdk8s-ath-am
        image: 379922354723.dkr.ecr.us-east-1.amazonaws.com/sdk8s-ath-am:10.4.0.1-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "5Gi"
          limits:
            memory: "5Gi"
        volumeMounts:
        - mountPath: /app/logs/app/Authority
          name: authority-logs
      - name: fluentbit-authority
        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        volumeMounts:
        - mountPath: /logs/app
          name: authority-logs
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
---
# CoreSuite PolicyPro Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdk8s-pol-am
  name: sdk8s-pol-am
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sdk8s-pol-am
  template:
    metadata:
      labels:
        app: sdk8s-pol-am
    spec:
      volumes:
      - name: policy-logs
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluentbit-config-adaptik
      containers:
      - name: sdk8s-pol-am
        image: 379922354723.dkr.ecr.us-east-1.amazonaws.com/sdk8s-pol-am:10.4.0.1-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "5Gi"
          limits:
            memory: "5Gi"
        volumeMounts:
        - mountPath: /app/logs/app/Policy
          name: policy-logs
      - name: fluentbit-policy
        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        volumeMounts:
        - mountPath: /logs/app
          name: policy-logs
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
---
# CoreSuite PolicyPro WorkManagerPro Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdk8s-pol-wm
  name: sdk8s-pol-wm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdk8s-pol-wm
  template:
    metadata:
      labels:
        app: sdk8s-pol-wm
    spec:
      volumes:
      - name: workmanager-logs
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluentbit-config-adaptik
      containers:
      - name: sdk8s-pol-wm
        image: 379922354723.dkr.ecr.us-east-1.amazonaws.com/sdk8s-pol-wm:10.4.0.1-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "3Gi"
          limits:
            memory: "3Gi"
        volumeMounts:
        - mountPath: /app/logs/app/Policy
          name: workmanager-logs
      - name: fluentbit-wm
        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        volumeMounts:
        - mountPath: /logs/app
          name: workmanager-logs
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
---
# CoreSuite BillingPro Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdk8s-bil-am
  name: sdk8s-bil-am
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sdk8s-bil-am
  template:
    metadata:
      labels:
        app: sdk8s-bil-am
    spec:
      volumes:
      - name: billing-logs
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluentbit-config-adaptik
      containers:
      - name: sdk8s-bil-am
        image: 379922354723.dkr.ecr.us-east-1.amazonaws.com/sdk8s-bil-am:10.4.0.1-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "5Gi"
          limits:
            memory: "5Gi"
        volumeMounts:
        - mountPath: /app/logs/app/Billing
          name: billing-logs
      - name: fluentbit-billing
        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        volumeMounts:
        - mountPath: /logs/app
          name: billing-logs
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
---
# CoreSuite ProducerPro Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdk8s-prd-am
  name: sdk8s-prd-am
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdk8s-prd-am
  template:
    metadata:
      labels:
        app: sdk8s-prd-am
    spec:
      volumes:
      - name: producer-logs
        emptyDir: {}
      - name: fluent-bit-config
        configMap:
          name: fluentbit-config-adaptik
      containers:
      - name: sdk8s-prd-am
        image: 379922354723.dkr.ecr.us-east-1.amazonaws.com/sdk8s-prd-am:10.4.0.1-latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "5Gi"
          limits:
            memory: "5Gi"
        volumeMounts:
        - mountPath: /app/logs/app/Producer
          name: producer-logs
      - name: fluentbit-producer
        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        volumeMounts:
        - mountPath: /logs/app
          name: producer-logs
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
---
# CoreSuite AuthorityPro Service
apiVersion: v1
kind: Service
metadata:
  name: sdk8s-ath-am
  labels:
    app: sdk8s-ath-am
spec:
  selector:
    app: sdk8s-ath-am
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31002
---
# CoreSuite PolicyPro Service
apiVersion: v1
kind: Service
metadata:
  name: sdk8s-pol-am
  labels:
    app: sdk8s-pol-am
spec:
  selector:
    app: sdk8s-pol-am
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000
---
# CoreSuite PolicyPro WorkManager Service
apiVersion: v1
kind: Service
metadata:
  name: sdk8s-pol-wm
  labels:
    app: sdk8s-pol-wm
spec:
  selector:
    app: sdk8s-pol-wm
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31007
---
# CoreSuite BillingPro Service
apiVersion: v1
kind: Service
metadata:
  name: sdk8s-bil-am
  labels:
    app: sdk8s-bil-am
spec:
  selector:
    app: sdk8s-bil-am
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31001
---
# CoreSuite ProducerPro Service
apiVersion: v1
kind: Service
metadata:
  name: sdk8s-prd-am
  labels:
    app: sdk8s-prd-am
spec:
  selector:
    app: sdk8s-prd-am
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31003
---
# CoreSuite Ingress (ALB)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdk8s
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: sdk8s
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sdk8s
    alb.ingress.kubernetes.io/group.order: '10'
    alb.ingress.kubernetes.io/security-groups: sdk8s-alb
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600,routing.http2.enabled=false
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:379922354723:certificate/3d186c2d-99b8-4640-8b85-dbaf422fd77a
spec:
  rules:
    - http:
        paths:
          - path: /AdaptikAuthority
            pathType: Prefix
            backend:
              service:
                name: sdk8s-ath-am
                port: 
                  number: 8080
          - path: /AdaptikPolicy
            pathType: Prefix
            backend:
              service:
                name: sdk8s-pol-am
                port: 
                  number: 8080
          - path: /AdaptikWork
            pathType: Prefix
            backend:
              service:
                name: sdk8s-pol-wm
                port: 
                  number: 8080
          - path: /AdaptikBilling
            pathType: Prefix
            backend:
              service:
                name: sdk8s-bil-am
                port: 
                  number: 8080
          - path: /AdaptikProducer
            pathType: Prefix
            backend:
              service:
                name: sdk8s-prd-am
                port: 
                  number: 8080
