ekscluster/nginx-static.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-connect-timeout: "600s"
    nginx.org/proxy-read-timeout: "600s"
    nginx.org/proxy-send-timeout: "600s"
    nginx.org/client-max-body-size: "100m"
    nginx.org/redirect-to-https: "True"
    nginx.org/hsts: "True"
    nginx.org/hsts-max-age: "63072000"
    nginx.org/hsts-include-subdomains: "True"
    nginx.org/hsts-behind-proxy: "True"

spec:
  rules:
  - host: ohiopssbxkub001.sapiens.int
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /AdaptikAuthority
        pathType: Prefix
        backend:
          service:
            name: sdk8s-ath-am
            port:
              number: 8080
      - path: /AdaptikPolicy
        pathType: Prefix
        backend:
          service:
            name: sdk8s-pol-am
            port:
              number: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  nginx


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-conf
          mountPath: /etc/nginx
          readOnly: true
        - name: log
          mountPath: /var/log/nginx
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
      - name: nginx-conf
        configMap:
          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: log
        emptyDir: {}
